--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.full-screen {
+    @apply fixed top-0 left-0 w-full h-full object-contain z-50;
+  }
