Jira: SE-4 Child Issues: SE-73, SE-74 I finished the styling for the modal box popup. It is now more contained within the screen and has a shadow border to easily distinguish it from the rest of the content. It is also now scrollable. I finished adding the rest of the missing preferences for the modal boxes for each of the different menu subsections (spicy & special instructions). Will fix styling issues and separate some of the logic in sprint 5.

--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -17,3 +17,14 @@
         cursor-pointer;
   }
 }
+
+/* scrollbar styles */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 10px;
+}
